--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306
 spring.datasource.username=root
 spring.datasource.password=password
