--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306
-spring.datasource.username=root
+spring.datasource.username=simongs
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
